--- a/app/src/main/assets/runtime.html
+++ b/app/src/main/assets/runtime.html
@@ -1,11 +1,15 @@
 <html>
     <head>
         <title>DiscordBlocks for Android Runtime Environment</title>
+		<link rel="stylesheet" href="css/runtime.css">
     </head>
     <body>
-        <script src="/android_asset/js/discord.js"></script>
-        <script type="text/javascript">
-            eval(blockly.getJS())
-        </script>
+		<div class="console" id="console">
+			<img src="discordblocks.png" class="icon">
+			<h2>Welcome to DiscordBlocks!</h2>
+			<h1>DiscordBlocks for Android Runtime Environment</h1>
+		</div>
+        <script src="js/discord.js"></script>
+		<script src="js/runtime.js"></script>
     </body>
 </html>
